feat(agent): 任务恢复摘要与轮次恢复
新增 agent/recovery 包（TaskRecoverySummaryBuilder + ToolExecutionSummarySupport），为中断轮次生成可读恢复摘要；AgentOrchestrator 支持 resumeSuspendContext；checkpoint 多态序列化与执行约束摘要适配；前端补 taskRecovery/turnPhase/toolExecution 三个工具模块及测试。

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>